--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -63,7 +63,7 @@ mouse_hide_wait         0.1
 #color15                #634D36
 background              #2A2622
 foreground              #EDE6DE
-cursor                  #FFA500
+cursor                  #FFFFFF
 url_color               #94A8D1
 selection_background    #544D45
 selection_foreground    #EDE6DE
