--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -64,7 +64,7 @@ mouse_hide_wait         0.1
 
 background              #2A2622
 foreground              #EDE6DE
-cursor                  #FFFFFF
+cursor                  #EBECF0
 url_color               #94A8D1
 selection_background    #544D45
 selection_foreground    #EDE6DE
