--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -22,7 +22,7 @@ input_delay             1
 tab_bar_style           separator
 tab_separator           "|"
 # FONT
-font_size               12
+font_size               18
 font_family             IBM Plex Mono
 bold_font               IBM Plex Mono Bold
 italic_font             IBM Plex Mono Italic
@@ -62,31 +62,31 @@ mouse_hide_wait         0.1
 #color14                #366363
 #color15                #634D36
 
-background              #2A2622
-foreground              #EDE6DE
-cursor                  #EBECF0
-url_color               #94A8D1
-selection_background    #544D45
-selection_foreground    #EDE6DE
-tab_bar_background      #38332E
-active_tab_background   #38332E
-active_tab_foreground   #E09952
-inactive_tab_background #38332E
-inactive_tab_foreground #C9B39C
-active_border_color     #463F3A
-inactive_border_color   #463F3A
-color0                  #38332E
-color1                  #B34D4D
-color2                  #669966
-color3                  #F7C96E
-color4                  #94A8D1
-color5                  #AD85AD
-color6                  #85ADAD
-color7                  #C9B39C
-color8                  #544D45
-color9                  #F7856E
-color10                 #94D194
-color11                 #F7C96E
-color12                 #94A8D1
-color13                 #D194BD
-color14                 #94D1D1
+#background              #2A2622
+#foreground              #EDE6DE
+cursor                  #FF0000
+#url_color               #94A8D1
+#selection_background    #544D45
+#selection_foreground    #EDE6DE
+#tab_bar_background      #38332E
+#active_tab_background   #38332E
+#active_tab_foreground   #E09952
+#inactive_tab_background #38332E
+#inactive_tab_foreground #C9B39C
+#active_border_color     #463F3A
+#inactive_border_color   #463F3A
+#color0                  #38332E
+#color1                  #B34D4D
+#color2                  #669966
+#color3                  #F7C96E
+#color4                  #94A8D1
+#color5                  #AD85AD
+#color6                  #85ADAD
+#color7                  #C9B39C
+#color8                  #544D45
+#color9                  #F7856E
+#color10                 #94D194
+#color11                 #F7C96E
+#color12                 #94A8D1
+#color13                 #D194BD
+#color14                 #94D1D1
