--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # MacOS TWEAKS
-macos_thicken_font      0.7
+macos_thicken_font      0.3
 map ctrl+shift+enter    new_window_with_cwd
 macos_quit_when_last_window_closed yes
 # WINDOW
@@ -22,7 +22,7 @@ input_delay             1
 tab_bar_style           separator
 tab_separator           "|"
 # FONT
-font_size               18
+font_size               14
 font_family             IBM Plex Mono
 bold_font               IBM Plex Mono Bold
 italic_font             IBM Plex Mono Italic
@@ -32,61 +32,61 @@ copy_on_select          no
 strip_trailing_spaces   always
 mouse_hide_wait         0.1
 # COLORS
-#background             #F7F2ED
-#foreground             #634D36
-#cursor                 #FFA500
-#url_color              #4D6EB3
-#selection_background   #E0CCB8
-#selection_foreground   #634D36
-#tab_bar_background     #F0E6DB
-#active_tab_background  #F0E6DB
-#active_tab_foreground  #CC8033
-#inactive_tab_background #F0E6DB
-#inactive_tab_foreground #856647
-#active_border_color    #F0E6DB
-#inactive_border_color  #F0E6DB
-#color0                 #F0E6DB
-#color1                 #D65C5C
-#color2                 #7AB87A
-#color3                 #D99D26
-#color4                 #4D6EB3
-#color5                 #B87AB8
-#color6                 #669999
-#color7                 #856647
-#color8                 #E0CCB8
-#color9                 #AD1F1F
-#color10                #339933
-#color11                #D99D26
-#color12                #4D6EB3
-#color13                #B34D90
-#color14                #366363
-#color15                #634D36
+background             #F7F2ED
+foreground             #634D36
+cursor                 #FFA500
+url_color              #4D6EB3
+selection_background   #E0CCB8
+selection_foreground   #634D36
+tab_bar_background     #F0E6DB
+active_tab_background  #F0E6DB
+active_tab_foreground  #CC8033
+inactive_tab_background #F0E6DB
+inactive_tab_foreground #856647
+active_border_color    #F0E6DB
+inactive_border_color  #F0E6DB
+color0                 #F0E6DB
+color1                 #D65C5C
+color2                 #7AB87A
+color3                 #D99D26
+color4                 #4D6EB3
+color5                 #B87AB8
+color6                 #669999
+color7                 #856647
+color8                 #E0CCB8
+color9                 #AD1F1F
+color10                #339933
+color11                #D99D26
+color12                #4D6EB3
+color13                #B34D90
+color14                #366363
+color15                #634D36
 
-background              #2A2622
-foreground              #EDE6DE
-cursor                  #FFA500
-url_color               #94A8D1
-selection_background    #544D45
-selection_foreground    #EDE6DE
-tab_bar_background      #38332E
-active_tab_background   #38332E
-active_tab_foreground   #E09952
-inactive_tab_background #38332E
-inactive_tab_foreground #C9B39C
-active_border_color     #463F3A
-inactive_border_color   #463F3A
-color0                  #38332E
-color1                  #B34D4D
-color2                  #669966
-color3                  #F7C96E
-color4                  #94A8D1
-color5                  #AD85AD
-color6                  #85ADAD
-color7                  #C9B39C
-color8                  #544D45
-color9                  #F7856E
-color10                 #94D194
-color11                 #F7C96E
-color12                 #94A8D1
-color13                 #D194BD
-color14                 #94D1D1
+#background              #2A2622
+#foreground              #EDE6DE
+#cursor                  #FFA500
+#url_color               #94A8D1
+#selection_background    #544D45
+#selection_foreground    #EDE6DE
+#tab_bar_background      #38332E
+#active_tab_background   #38332E
+#active_tab_foreground   #E09952
+#inactive_tab_background #38332E
+#inactive_tab_foreground #C9B39C
+#active_border_color     #463F3A
+#inactive_border_color   #463F3A
+#color0                  #38332E
+#color1                  #B34D4D
+#color2                  #669966
+#color3                  #F7C96E
+#color4                  #94A8D1
+#color5                  #AD85AD
+#color6                  #85ADAD
+#color7                  #C9B39C
+#color8                  #544D45
+#color9                  #F7856E
+#color10                 #94D194
+#color11                 #F7C96E
+#color12                 #94A8D1
+#color13                 #D194BD
+#color14                 #94D1D1
