--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # MacOS TWEAKS
-macos_thicken_font      0.7
+#macos_thicken_font      0.7
 map ctrl+shift+enter    new_window_with_cwd
 macos_quit_when_last_window_closed yes
 # WINDOW
-background_opacity      1.0
+background_opacity      0.9
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
@@ -22,10 +22,10 @@ input_delay             1
 tab_bar_style           separator
 tab_separator           "|"
 # FONT
-font_size               14
-font_family             IBM Plex Mono
-bold_font               IBM Plex Mono Bold
-italic_font             IBM Plex Mono Italic
+font_size               18
+font_family             ProggyCleanTT
+#bold_font               IBM Plex Mono Bold
+#italic_font             IBM Plex Mono Italic
 # CLIPBOARD
 detect_urls             yes
 copy_on_select          no
@@ -64,7 +64,7 @@ mouse_hide_wait         0.1
 
 background              #2A2622
 foreground              #EDE6DE
-cursor                  #FFA500
+cursor                  #FFFFFF
 url_color               #94A8D1
 selection_background    #544D45
 selection_foreground    #EDE6DE
