--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -22,7 +22,7 @@ input_delay             1
 tab_bar_style           separator
 tab_separator           "|"
 # FONT
-font_size               18
+font_size               16
 font_family             IBM Plex Mono
 bold_font               IBM Plex Mono Bold
 italic_font             IBM Plex Mono Italic
@@ -64,7 +64,7 @@ mouse_hide_wait         0.01
 
 #background              #2A2622
 #foreground              #EDE6DE
-#cursor                  #FFFFFF
+cursor                  #FFFFFF
 #url_color               #94A8D1
 #selection_background    #544D45
 #selection_foreground    #EDE6DE
