--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,10 +9,10 @@ window_padding_width    0
 remember_window_size    no
 initial_window_width    80c
 initial_window_height   25c
-active_border_color     #000010
-inactive_border_color   #000010
+#active_border_color     #000010
+#inactive_border_color   #000010
 bell_border_color       #000010
-enabled_layouts tall:bias=50;full_size=1;mirrored=false
+enabled_layouts fat:bias=50;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        2000
 # EDITOR
