--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,10 +7,10 @@ background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
-initial_window_width    80c
-initial_window_height   25c
-#active_border_color     #000010
-#inactive_border_color   #000010
+initial_window_width    84c
+initial_window_height   41c
+active_border_color     #FFFFFF
+inactive_border_color   #222222
 bell_border_color       #000010
 enabled_layouts fat:bias=50;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
@@ -22,7 +22,7 @@ input_delay             1
 tab_bar_style           separator
 tab_separator           "|"
 # FONT
-font_size               16
+font_size               15
 font_family             IBM Plex Mono
 bold_font               IBM Plex Mono Bold
 italic_font             IBM Plex Mono Italic
