--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -12,7 +12,7 @@ initial_window_height   41c
 active_border_color     #FFFFFF
 inactive_border_color   #222222
 bell_border_color       #000010
-enabled_layouts fat:bias=50;full_size=1;mirrored=false
+enabled_layouts         fat:bias=50;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        2000
 # EDITOR
@@ -62,19 +62,19 @@ mouse_hide_wait         0.01
 #color14                #366363
 #color15                #634D36
 
+cursor                  #FFFFFF
+tab_bar_background      #222222
+active_tab_background   #222222
+active_tab_foreground   #FFFF00
+inactive_tab_background #222222
+inactive_tab_foreground #888888
+active_border_color     #463F3A
+inactive_border_color   #463F3A
 #background              #2A2622
 #foreground              #EDE6DE
-cursor                  #FFFFFF
 #url_color               #94A8D1
 #selection_background    #544D45
 #selection_foreground    #EDE6DE
-#tab_bar_background      #38332E
-#active_tab_background   #38332E
-#active_tab_foreground   #E09952
-#inactive_tab_background #38332E
-#inactive_tab_foreground #C9B39C
-#active_border_color     #463F3A
-#inactive_border_color   #463F3A
 #color0                  #38332E
 #color1                  #B34D4D
 #color2                  #669966
