--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -65,11 +65,13 @@ mouse_hide_wait         0.01
 cursor                  #FFFFFF
 tab_bar_background      #222222
 active_tab_background   #222222
-active_tab_foreground   #FFFF00
+active_tab_foreground   #00FF00
 inactive_tab_background #222222
 inactive_tab_foreground #888888
-active_border_color     #463F3A
-inactive_border_color   #463F3A
+active_border_color     #00FF00
+inactive_border_color   #222222
+#active_border_color     #463F3A
+#inactive_border_color   #463F3A
 #background              #2A2622
 #foreground              #EDE6DE
 #url_color               #94A8D1
