--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # MacOS TWEAKS
-macos_thicken_font      0.3
+macos_thicken_font      0.2
 map ctrl+shift+enter    new_window_with_cwd
 macos_quit_when_last_window_closed yes
 # WINDOW
@@ -8,7 +8,7 @@ hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
 initial_window_width    84c
-initial_window_height   41c
+initial_window_height   34c
 active_border_color     #FFFFFF
 inactive_border_color   #222222
 bell_border_color       #000010
@@ -18,6 +18,7 @@ scrollback_lines        2000
 # EDITOR
 editor                  nvim
 input_delay             1
+cursor_blink_interval   0
 # TABS
 tab_bar_style           separator
 tab_separator           "|"
