--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,7 +7,7 @@ background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
-initial_window_width    84c
+initial_window_width    104c
 initial_window_height   34c
 active_border_color     #FFFFFF
 inactive_border_color   #222222
@@ -33,14 +33,14 @@ copy_on_select          no
 strip_trailing_spaces   always
 
 # INDUSTRY DARK
-cursor                  #FFFFFF
-tab_bar_background      #222222
-active_tab_background   #222222
-active_tab_foreground   #00FF00
-inactive_tab_background #222222
-inactive_tab_foreground #888888
-active_border_color     #00FF00
-inactive_border_color   #222222
+#cursor                  #FFFFFF
+#tab_bar_background      #222222
+#active_tab_background   #222222
+#active_tab_foreground   #00FF00
+#inactive_tab_background #222222
+#inactive_tab_foreground #888888
+#active_border_color     #00FF00
+#inactive_border_color   #222222
 
 # MELANGE LIGHT
 #background             #F7F2ED
@@ -74,31 +74,31 @@ inactive_border_color   #222222
 #color15                #634D36
 
 # MELANGE DARK
-#background              #2A2622
-#foreground              #EDE6DE
-#cursor                  #FFFFFF
-#url_color               #94A8D1
-#selection_background    #544D45
-#selection_foreground    #EDE6DE
-#tab_bar_background      #38332E
-#active_tab_background   #38332E
-#active_tab_foreground   #E09952
-#inactive_tab_background #38332E
-#inactive_tab_foreground #C9B39C
-#active_border_color     #463F3A
-#inactive_border_color   #463F3A
-#color0                  #38332E
-#color1                  #B34D4D
-#color2                  #669966
-#color3                  #F7C96E
-#color4                  #94A8D1
-#color5                  #AD85AD
-#color6                  #85ADAD
-#color7                  #C9B39C
-#color8                  #544D45
-#color9                  #F7856E
-#color10                 #94D194
-#color11                 #F7C96E
-#color12                 #94A8D1
-#color13                 #D194BD
-#color14                 #94D1D1
+background              #2A2622
+foreground              #EDE6DE
+cursor                  #FFFFFF
+url_color               #94A8D1
+selection_background    #544D45
+selection_foreground    #EDE6DE
+tab_bar_background      #38332E
+active_tab_background   #38332E
+active_tab_foreground   #E09952
+inactive_tab_background #38332E
+inactive_tab_foreground #C9B39C
+active_border_color     #463F3A
+inactive_border_color   #463F3A
+color0                  #38332E
+color1                  #B34D4D
+color2                  #669966
+color3                  #F7C96E
+color4                  #94A8D1
+color5                  #AD85AD
+color6                  #85ADAD
+color7                  #C9B39C
+color8                  #544D45
+color9                  #F7856E
+color10                 #94D194
+color11                 #F7C96E
+color12                 #94A8D1
+color13                 #D194BD
+color14                 #94D1D1
