--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -103,41 +103,41 @@ color12                 #94A8D1
 color13                 #D194BD
 color14                 #94D1D1
 
-#cursor                  #FBF1C7
-#
-#background              #282828
-#foreground              #FBF1C7
-#selection_foreground    #928374
-#selection_background    #EBDBB2
-#
-## black
-#color0                  #282828
-#color8                  #7C6F64
-#
-## red
-#color1                  #CC241D
-#color9                  #FB4934
-#
-##: green
-#color2                  #98971A
-#color10                 #B8BB26
-#
-## yellow
-#color3                  #D79921
-#color11                 #FABD2F
-#
-## blue
-#color4                  #458588
-#color12                 #83A598
-#
-## purple
-#color5                  #B16286
-#color13                 #D3869B
-#
-## aqua
-#color6                  #689D6A
-#color14                 #8EC07C
-#
-## white
-#color7                  #A89984
-#color15                 #FBF1C7
+cursor                  #FBF1C7
+
+background              #282828
+foreground              #FBF1C7
+selection_foreground    #928374
+selection_background    #EBDBB2
+
+# black
+color0                  #282828
+color8                  #7C6F64
+
+# red
+color1                  #CC241D
+color9                  #FB4934
+
+#: green
+color2                  #98971A
+color10                 #B8BB26
+
+# yellow
+color3                  #D79921
+color11                 #FABD2F
+
+# blue
+color4                  #458588
+color12                 #83A598
+
+# purple
+color5                  #B16286
+color13                 #D3869B
+
+# aqua
+color6                  #689D6A
+color14                 #8EC07C
+
+# white
+color7                  #A89984
+color15                 #FBF1C7
