--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,8 +7,8 @@ background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
-initial_window_width    81c
-initial_window_height   27c
+initial_window_width    86c
+initial_window_height   43c
 active_border_color     #FFFFFF
 inactive_border_color   #222222
 bell_border_color       #000010
@@ -23,7 +23,7 @@ cursor_blink_interval   0
 tab_bar_style           separator
 tab_separator           "|"
 # FONT
-font_size               15
+font_size               17
 font_family             IBM Plex Mono
 bold_font               IBM Plex Mono Bold
 italic_font             IBM Plex Mono Italic
@@ -76,7 +76,7 @@ strip_trailing_spaces   always
 # MELANGE DARK
 background              #2A2622
 foreground              #EDE6DE
-cursor                  #FFFFFF
+cursor                  #FFA500
 url_color               #94A8D1
 selection_background    #544D45
 selection_foreground    #EDE6DE
