--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -76,7 +76,7 @@ strip_trailing_spaces   always
 # MELANGE DARK
 background              #2A2622
 foreground              #EDE6DE
-cursor                  #FFA500
+cursor                  #FFFFFF
 url_color               #94A8D1
 selection_background    #544D45
 selection_foreground    #EDE6DE
