--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # MacOS TWEAKS
-macos_thicken_font      0.5
+macos_thicken_font      0.3
 map ctrl+shift+enter    new_window_with_cwd
 macos_quit_when_last_window_closed yes
 # WINDOW
@@ -7,7 +7,7 @@ background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
-initial_window_width    86c
+initial_window_width    128c
 initial_window_height   43c
 active_border_color     #FFFFFF
 inactive_border_color   #222222
@@ -42,102 +42,62 @@ strip_trailing_spaces   always
 #active_border_color     #00FF00
 #inactive_border_color   #232323
 
-# MELANGE LIGHT
-#background             #F7F2ED
-#foreground             #634D36
-#cursor                 #FFA500
-#url_color              #4D6EB3
-#selection_background   #E0CCB8
-#selection_foreground   #634D36
-#tab_bar_background     #F0E6DB
-#active_tab_background  #F0E6DB
-#active_tab_foreground  #CC8033
-#inactive_tab_background #F0E6DB
-#inactive_tab_foreground #856647
-#active_border_color    #F0E6DB
-#inactive_border_color  #F0E6DB
-#color0                 #F0E6DB
-#color1                 #D65C5C
-#color2                 #7AB87A
-#color3                 #D99D26
-#color4                 #4D6EB3
-#color5                 #B87AB8
-#color6                 #669999
-#color7                 #856647
-#color8                 #E0CCB8
-#color9                 #AD1F1F
-#color10                #339933
-#color11                #D99D26
-#color12                #4D6EB3
-#color13                #B34D90
-#color14                #366363
-#color15                #634D36
-
 # MELANGE DARK
-background              #2A2622
-foreground              #EDE6DE
-cursor                  #FFFFFF
-url_color               #94A8D1
-selection_background    #544D45
-selection_foreground    #EDE6DE
-tab_bar_background      #38332E
-active_tab_background   #38332E
-active_tab_foreground   #E09952
-inactive_tab_background #38332E
-inactive_tab_foreground #C9B39C
-active_border_color     #EDE6DE
-inactive_border_color   #463F3A
-color0                  #38332E
-color1                  #B34D4D
-color2                  #669966
-color3                  #F7C96E
-color4                  #94A8D1
-color5                  #AD85AD
-color6                  #85ADAD
-color7                  #C9B39C
-color8                  #544D45
-color9                  #F7856E
-color10                 #94D194
-color11                 #F7C96E
-color12                 #94A8D1
-color13                 #D194BD
-color14                 #94D1D1
+#background              #2A2622
+#foreground              #EDE6DE
+#cursor                  #FFFFFF
+#url_color               #94A8D1
+#selection_background    #544D45
+#selection_foreground    #EDE6DE
+#tab_bar_background      #38332E
+#active_tab_background   #38332E
+#active_tab_foreground   #E09952
+#inactive_tab_background #38332E
+#inactive_tab_foreground #C9B39C
+#active_border_color     #EDE6DE
+#inactive_border_color   #463F3A
+#color0                  #38332E
+#color1                  #B34D4D
+#color2                  #669966
+#color3                  #F7C96E
+#color4                  #94A8D1
+#color5                  #AD85AD
+#color6                  #85ADAD
+#color7                  #C9B39C
+#color8                  #544D45
+#color9                  #F7856E
+#color10                 #94D194
+#color11                 #F7C96E
+#color12                 #94A8D1
+#color13                 #D194BD
+#color14                 #94D1D1
 
-#cursor                  #FBF1C7
-#
-#background              #282828
-#foreground              #FBF1C7
-#selection_foreground    #928374
-#selection_background    #EBDBB2
-#
-## black
-#color0                  #282828
-#color8                  #7C6F64
-#
-## red
-#color1                  #CC241D
-#color9                  #FB4934
-#
-##: green
-#color2                  #98971A
-#color10                 #B8BB26
-#
-## yellow
-#color3                  #D79921
-#color11                 #FABD2F
-#
-## blue
-#color4                  #458588
-#color12                 #83A598
-#
-## purple
-#color5                  #B16286
-#color13                 #D3869B
-#
-## aqua
-#color6                  #689D6A
-#color14                 #8EC07C
-#
-## white
-#color7                  #A89984
-#color15                 #FBF1C7
+# MATERIAL DARKER
+background            #222221
+foreground            #E4E4E4
+cursor                #FFFFFF
+selection_background  #DEDEDE
+color0                #212121
+color8                #424242
+color1                #B7141E
+color9                #E83A3F
+color2                #457B23
+color10               #7ABA39
+color3                #F5971D
+color11               #FEE92E
+color4                #134EB2
+color12               #53A4F3
+color5                #550087
+color13               #A94DBB
+color6                #0E707C
+color14               #26BAD1
+color7                #EEEEEE
+color15               #D8D8D8
+selection_foreground  #222221
+tab_bar_background    #222222
+active_tab_background #222222
+active_tab_foreground #FFA500
+inactive_tab_background #222222
+inactive_tab_foreground #888888
+active_border_color   #00FF00
+inactive_border_color #232323
