--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -73,7 +73,7 @@ strip_trailing_spaces   always
 #color14                 #94D1D1
 
 # MATERIAL DARKER
-background            #222211
+background            #222223
 foreground            #E4E4E4
 cursor                #FFFFFF
 selection_background  #DEDEDE
@@ -99,5 +99,5 @@ active_tab_background #222222
 active_tab_foreground #FFA500
 inactive_tab_background #222222
 inactive_tab_foreground #888888
-active_border_color   #00FF00
-inactive_border_color #232323
+active_border_color   #434343
+inactive_border_color #434343
