--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -93,11 +93,11 @@ color6                #0E707C
 color14               #26BAD1
 color7                #EEEEEE
 color15               #D8D8D8
-selection_foreground  #222221
-tab_bar_background    #222222
-active_tab_background #222222
+selection_foreground  #1C1C1C
+tab_bar_background    #1C1C1C
+active_tab_background #1C1C1C
 active_tab_foreground #FFA500
-inactive_tab_background #222222
+inactive_tab_background #1C1C1C
 inactive_tab_foreground #888888
 active_border_color   #434343
 inactive_border_color #434343
