--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -32,7 +32,7 @@ detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
 
-# MATERIAL DARKER
+## MATERIAL DARKER
 background            #222222
 foreground            #E4E4E4
 cursor                #AAAAAA
@@ -62,15 +62,15 @@ inactive_tab_foreground #555555
 active_border_color   #333333
 inactive_border_color #333333
 
-## INDUSTRY DARK
-#cursor                  #FFFFFF
-#tab_bar_background      #232323
-#active_tab_background   #232323
-#active_tab_foreground   #FF00FF
-#inactive_tab_background #232323
-#inactive_tab_foreground #888888
-#active_border_color     #00FF00
-#inactive_border_color   #232323
+# INDUSTRY DARK
+cursor                  #FFFFFF
+tab_bar_background      #232323
+active_tab_background   #232323
+active_tab_foreground   #FF00FF
+inactive_tab_background #232323
+inactive_tab_foreground #888888
+active_border_color     #00FF00
+inactive_border_color   #232323
 
 # MELANGE DARK
 #background              #2A2622
