--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # MacOS TWEAKS
-macos_thicken_font      0.3
+macos_thicken_font      0.36
 map ctrl+shift+enter    new_window_with_cwd
 macos_quit_when_last_window_closed yes
 # WINDOW
@@ -7,8 +7,8 @@ background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
-initial_window_width    84c
-initial_window_height   40c
+initial_window_width    104c
+initial_window_height   29c
 active_border_color     #FFFFFF
 inactive_border_color   #222222
 bell_border_color       #000010
@@ -53,24 +53,24 @@ color6                #0E707C
 color14               #26BAD1
 color7                #EEEEEE
 color15               #D8D8D8
-selection_foreground  #1C1C1C
-tab_bar_background    #1C1C1C
-active_tab_background #1C1C1C
+selection_foreground  #333333
+tab_bar_background    #333333
+active_tab_background #333333
 active_tab_foreground #FFA500
-inactive_tab_background #1C1C1C
-inactive_tab_foreground #555555
+inactive_tab_background #333333
+inactive_tab_foreground #777777
 active_border_color   #333333
 inactive_border_color #333333
 
 # INDUSTRY DARK
-cursor                  #FFFFFF
-tab_bar_background      #232323
-active_tab_background   #232323
-active_tab_foreground   #FF00FF
-inactive_tab_background #232323
-inactive_tab_foreground #888888
-active_border_color     #00FF00
-inactive_border_color   #232323
+#cursor                  #FFFFFF
+#tab_bar_background      #232323
+#active_tab_background   #232323
+#active_tab_foreground   #FF00FF
+#inactive_tab_background #232323
+#inactive_tab_foreground #888888
+#active_border_color     #00FF00
+#inactive_border_color   #232323
 
 # MELANGE DARK
 #background              #2A2622
