--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -35,7 +35,7 @@ strip_trailing_spaces   always
 ## MATERIAL DARKER
 background            #222222
 foreground            #E4E4E4
-cursor                #AAAAAA
+cursor                #FFFFFF
 selection_background  #DEDEDE
 color0                #212121
 color8                #424242
