--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -29,37 +29,6 @@ italic_font             IBM Plex Mono Italic
 detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
-
-## MATERIAL DARKER
-background            #222222
-foreground            #E4E4E4
-cursor                #FFFFFF
-selection_background  #DEDEDE
-color0                #212121
-color8                #424242
-color1                #B7141E
-color9                #E83A3F
-color2                #457B23
-color10               #7ABA39
-color3                #F5971D
-color11               #FEE92E
-color4                #134EB2
-color12               #53A4F3
-color5                #550087
-color13               #A94DBB
-color6                #0E707C
-color14               #26BAD1
-color7                #EEEEEE
-color15               #D8D8D8
-selection_foreground  #333333
-tab_bar_background    #333333
-active_tab_background #333333
-active_tab_foreground #FFA500
-inactive_tab_background #333333
-inactive_tab_foreground #777777
-active_border_color   #333333
-inactive_border_color #333333
-
 # INDUSTRY DARK
 #cursor                  #FFFFFF
 #tab_bar_background      #232323
@@ -69,7 +38,6 @@ inactive_border_color #333333
 #inactive_tab_foreground #888888
 #active_border_color     #00FF00
 #inactive_border_color   #232323
-
 # MELANGE DARK
 #background              #2A2622
 #foreground              #EDE6DE
@@ -99,3 +67,32 @@ inactive_border_color #333333
 #color12                 #94A8D1
 #color13                 #D194BD
 #color14                 #94D1D1
+# MATERIAL DARKER
+background            #222222
+foreground            #E4E4E4
+cursor                #FFFFFF
+selection_background  #DEDEDE
+color0                #212121
+color8                #424242
+color1                #B7141E
+color9                #E83A3F
+color2                #457B23
+color10               #7ABA39
+color3                #F5971D
+color11               #FEE92E
+color4                #134EB2
+color12               #53A4F3
+color5                #550087
+color13               #A94DBB
+color6                #0E707C
+color14               #26BAD1
+color7                #EEEEEE
+color15               #D8D8D8
+selection_foreground  #333333
+tab_bar_background    #333333
+active_tab_background #333333
+active_tab_foreground #FFA500
+inactive_tab_background #333333
+inactive_tab_foreground #777777
+active_border_color   #333333
+inactive_border_color #333333
