--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # MacOS TWEAKS
 macos_thicken_font      0.4
 map ctrl+shift+enter    new_window_with_cwd
-macos_quit_when_last_window_closed yes
+macos_quit_when_last_window_closed no
 # WINDOW
 background_opacity      1.0
 hide_window_decorations yes
