--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -67,28 +67,59 @@ strip_trailing_spaces   always
 #color12                 #94A8D1
 #color13                 #D194BD
 #color14                 #94D1D1
-# MATERIAL DARKER
-background            #222222
-foreground            #E4E4E4
-cursor                #FFFFFF
-selection_background  #DEDEDE
-color0                #212121
-color8                #424242
-color1                #B7141E
-color9                #E83A3F
-color2                #457B23
-color10               #7ABA39
-color3                #F5971D
-color11               #FEE92E
-color4                #134EB2
-color12               #53A4F3
-color5                #550087
-color13               #A94DBB
-color6                #0E707C
-color14               #26BAD1
-color7                #EEEEEE
-color15               #D8D8D8
-selection_foreground  #333333
+
+## MATERIAL DARKER
+#background            #222222
+#foreground            #E4E4E4
+#cursor                #FFFFFF
+#selection_background  #DEDEDE
+#color0                #212121
+#color8                #424242
+#color1                #B7141E
+#color9                #E83A3F
+#color2                #457B23
+#color10               #7ABA39
+#color3                #F5971D
+#color11               #FEE92E
+#color4                #134EB2
+#color12               #53A4F3
+#color5                #550087
+#color13               #A94DBB
+#color6                #0E707C
+#color14               #26BAD1
+#color7                #EEEEEE
+#color15               #D8D8D8
+#selection_foreground  #333333
+#tab_bar_background    #333333
+#active_tab_background #333333
+#active_tab_foreground #FFA500
+#inactive_tab_background #333333
+#inactive_tab_foreground #777777
+#active_border_color   #333333
+#inactive_border_color #333333
+
+# SPRING LIGHT
+background            #FFFFFF
+foreground            #4D4D4C
+cursor                #00CED1
+color0                #000000
+color8                #000000
+color1                #FF4C83
+color9                #FF0021
+color2                #1F8C3A
+color10               #1FC231
+color3                #1FC95A
+color11               #D4B706
+color4                #1CD2EE
+color12               #15A9FD
+color5                #8959A8
+color13               #8959A8
+color6                #3E999F
+color14               #3E999F
+color7                #FFFEFE
+color15               #FFFEFE
+selection_background  #D6D6D6
+selection_foreground #fFFFFF
 tab_bar_background    #333333
 active_tab_background #333333
 active_tab_foreground #FFA500
