--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -98,32 +98,45 @@ strip_trailing_spaces   always
 #active_border_color   #333333
 #inactive_border_color #333333
 
-# SPRING LIGHT
-background            #FFFFFF
-foreground            #4D4D4C
-cursor                #00CED1
-color0                #000000
-color8                #000000
-color1                #FF4C83
-color9                #FF0021
-color2                #1F8C3A
-color10               #1FC231
-color3                #1FC95A
-color11               #D4B706
-color4                #1CD2EE
-color12               #15A9FD
-color5                #8959A8
-color13               #8959A8
-color6                #3E999F
-color14               #3E999F
-color7                #FFFEFE
-color15               #FFFEFE
-selection_background  #D6D6D6
-selection_foreground #fFFFFF
-tab_bar_background    #333333
-active_tab_background #333333
-active_tab_foreground #FFA500
-inactive_tab_background #333333
-inactive_tab_foreground #777777
-active_border_color   #333333
-inactive_border_color #333333
+# github colors for Kitty
+
+background #ffffff
+foreground #4d5566
+selection_background #dbe9f9
+selection_foreground #4d5566
+url_color #4d5566
+cursor #fdad5c
+
+# Tabs
+active_tab_background #0366d6
+active_tab_foreground #f6f8fa
+inactive_tab_background #4d5566
+inactive_tab_foreground #f6f8fa
+
+# Windows Border
+active_border_color #e1e4e8
+inactive_border_color #e1e4e8
+
+# normal
+color0 #24292e
+color1 #d73a49
+color2 #22863a
+color3 #b08800
+color4 #0366d6
+color5 #6f42c1
+color6 #1b7c83
+color7 #424242
+
+# bright
+color8 #424242
+color9 #cb2431
+color10 #28a745
+color11 #dbab09
+color12 #2188ff
+color13 #8a63d2
+color14 #3192aa
+color15 #4d5566
+
+# extended colors
+color16 #dbab09
+color17 #cb2431
