--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,8 +7,8 @@ background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
-initial_window_width    100c
-initial_window_height   29c
+initial_window_width    81c
+initial_window_height   27c
 bell_border_color       #000010
 enabled_layouts fat:bias=50;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
@@ -98,25 +98,21 @@ strip_trailing_spaces   always
 #active_border_color   #333333
 #inactive_border_color #333333
 
-# github colors for Kitty
-
+# GITHUB LIGHT
 background #ffffff
 foreground #4d5566
 selection_background #dbe9f9
 selection_foreground #4d5566
 url_color #4d5566
-cursor #fdad5c
-
+cursor #D3D3D3
 # Tabs
 active_tab_background #0366d6
 active_tab_foreground #f6f8fa
 inactive_tab_background #4d5566
 inactive_tab_foreground #f6f8fa
-
 # Windows Border
 active_border_color #e1e4e8
 inactive_border_color #e1e4e8
-
 # normal
 color0 #24292e
 color1 #d73a49
@@ -126,7 +122,6 @@ color4 #0366d6
 color5 #6f42c1
 color6 #1b7c83
 color7 #424242
-
 # bright
 color8 #424242
 color9 #cb2431
@@ -136,7 +131,6 @@ color12 #2188ff
 color13 #8a63d2
 color14 #3192aa
 color15 #4d5566
-
 # extended colors
 color16 #dbab09
 color17 #cb2431
