--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -106,10 +106,10 @@ selection_foreground #4d5566
 url_color #4d5566
 cursor #D3D3D3
 # Tabs
-active_tab_background #0366d6
-active_tab_foreground #f6f8fa
-inactive_tab_background #4d5566
-inactive_tab_foreground #f6f8fa
+active_tab_background #FFFFFF
+active_tab_foreground #0366d6
+inactive_tab_background #FFFFFF
+inactive_tab_foreground #CCCCCC
 # Windows Border
 active_border_color #e1e4e8
 inactive_border_color #e1e4e8
