--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -104,7 +104,7 @@ foreground #4d5566
 selection_background #dbe9f9
 selection_foreground #4d5566
 url_color #4d5566
-cursor #D3D3D3
+cursor #FCD299
 # Tabs
 active_tab_background #FFFFFF
 active_tab_foreground #0366d6
