--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
 initial_window_width    81c
-initial_window_height   27c
+initial_window_height   34c
 bell_border_color       #000010
 enabled_layouts fat:bias=50;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
@@ -68,69 +68,32 @@ strip_trailing_spaces   always
 #color13                 #D194BD
 #color14                 #94D1D1
 
-## MATERIAL DARKER
-#background            #222222
-#foreground            #E4E4E4
-#cursor                #FFFFFF
-#selection_background  #DEDEDE
-#color0                #212121
-#color8                #424242
-#color1                #B7141E
-#color9                #E83A3F
-#color2                #457B23
-#color10               #7ABA39
-#color3                #F5971D
-#color11               #FEE92E
-#color4                #134EB2
-#color12               #53A4F3
-#color5                #550087
-#color13               #A94DBB
-#color6                #0E707C
-#color14               #26BAD1
-#color7                #EEEEEE
-#color15               #D8D8D8
-#selection_foreground  #333333
-#tab_bar_background    #333333
-#active_tab_background #333333
-#active_tab_foreground #FFA500
-#inactive_tab_background #333333
-#inactive_tab_foreground #777777
-#active_border_color   #333333
-#inactive_border_color #333333
-
-# GITHUB LIGHT
-background #ffffff
-foreground #4d5566
-selection_background #dbe9f9
-selection_foreground #4d5566
-url_color #4d5566
-cursor #FCD299
-# Tabs
-active_tab_background #FFFFFF
-active_tab_foreground #0366d6
-inactive_tab_background #FFFFFF
-inactive_tab_foreground #CCCCCC
-# Windows Border
-active_border_color #e1e4e8
-inactive_border_color #e1e4e8
-# normal
-color0 #24292e
-color1 #d73a49
-color2 #22863a
-color3 #b08800
-color4 #0366d6
-color5 #6f42c1
-color6 #1b7c83
-color7 #424242
-# bright
-color8 #424242
-color9 #cb2431
-color10 #28a745
-color11 #dbab09
-color12 #2188ff
-color13 #8a63d2
-color14 #3192aa
-color15 #4d5566
-# extended colors
-color16 #dbab09
-color17 #cb2431
+# MATERIAL DARKER
+background            #222222
+foreground            #E4E4E4
+cursor                #FFFFFF
+selection_background  #DEDEDE
+color0                #212121
+color8                #424242
+color1                #B7141E
+color9                #E83A3F
+color2                #457B23
+color10               #7ABA39
+color3                #F5971D
+color11               #FEE92E
+color4                #134EB2
+color12               #53A4F3
+color5                #550087
+color13               #A94DBB
+color6                #0E707C
+color14               #26BAD1
+color7                #EEEEEE
+color15               #D8D8D8
+selection_foreground  #333333
+tab_bar_background    #333333
+active_tab_background #333333
+active_tab_foreground #FFA500
+inactive_tab_background #333333
+inactive_tab_foreground #777777
+active_border_color   #333333
+inactive_border_color #333333
