--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,14 +1,14 @@
 # MacOS TWEAKS
 macos_thicken_font      0.4
 map ctrl+shift+enter    new_window_with_cwd
-macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed yes
 # WINDOW
 background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
-initial_window_width    130c
-initial_window_height   42c
+initial_window_width    90c
+initial_window_height   45c
 bell_border_color       #000010
 enabled_layouts fat:bias=50;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
