--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
 initial_window_width    90c
-initial_window_height   23c
+initial_window_height   27c
 bell_border_color       #000010
 enabled_layouts fat:bias=50;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
@@ -21,7 +21,7 @@ cursor_blink_interval   0
 tab_bar_style           separator
 tab_separator           "|"
 # FONT
-font_size               18
+font_size               23
 font_family             IBM Plex Mono
 bold_font               IBM Plex Mono Bold
 italic_font             IBM Plex Mono Italic
@@ -29,6 +29,7 @@ italic_font             IBM Plex Mono Italic
 detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
+
 # INDUSTRY DARK
 #cursor                  #FFFFFF
 #tab_bar_background      #232323
@@ -38,7 +39,8 @@ strip_trailing_spaces   always
 #inactive_tab_foreground #888888
 #active_border_color     #00FF00
 #inactive_border_color   #232323
-# MELANGE DARK
+
+## MELANGE DARK
 #background              #2A2622
 #foreground              #EDE6DE
 #cursor                  #FFFFFF
