--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,6 +3,7 @@ macos_thicken_font      0.65
 map ctrl+shift+enter    new_window_with_cwd
 macos_quit_when_last_window_closed yes
 # WINDOW
+enable_audio_bell no
 background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
@@ -21,7 +22,7 @@ cursor_blink_interval   0
 tab_bar_style           separator
 tab_separator           "|"
 # FONT
-font_size               23
+font_size               21
 font_family             IBM Plex Mono
 bold_font               IBM Plex Mono Bold
 italic_font             IBM Plex Mono Italic
