--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,8 +8,8 @@ background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
-#initial_window_width    90c
-#initial_window_height   27c
+initial_window_width    90c
+initial_window_height   27c
 bell_border_color       #000010
 enabled_layouts tall:bias=60;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
@@ -22,7 +22,7 @@ cursor_blink_interval   0
 tab_bar_style           separator
 tab_separator           "|"
 # FONT
-font_size               21
+font_size               19
 font_family             IBM Plex Mono
 bold_font               IBM Plex Mono Bold
 italic_font             IBM Plex Mono Italic
