--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -23,9 +23,10 @@ tab_bar_style           separator
 tab_separator           "|"
 # FONT
 font_size               19
-font_family             IBM Plex Mono
-bold_font               IBM Plex Mono Bold
-italic_font             IBM Plex Mono Italic
+font_family             ProggyCleanTT
+#font_family             IBM Plex Mono
+#bold_font               IBM Plex Mono Bold
+#italic_font             IBM Plex Mono Italic
 # CLIPBOARD
 detect_urls             yes
 copy_on_select          no
