--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # MacOS TWEAKS
-macos_thicken_font      0.65
+#macos_thicken_font      0.65
 map ctrl+shift+enter    new_window_with_cwd
 macos_quit_when_last_window_closed yes
 # WINDOW
@@ -22,7 +22,7 @@ cursor_blink_interval   0
 tab_bar_style           separator
 tab_separator           "|"
 # FONT
-font_size               19
+font_size               21
 font_family             ProggyCleanTT
 #font_family             IBM Plex Mono
 #bold_font               IBM Plex Mono Bold
