--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,8 @@
 # MacOS TWEAKS
-#macos_thicken_font      0.65
+macos_thicken_font      0.5
 map ctrl+shift+enter    new_window_with_cwd
 macos_quit_when_last_window_closed yes
+
 # WINDOW
 enable_audio_bell no
 background_opacity      1.0
@@ -14,19 +15,22 @@ bell_border_color       #000010
 enabled_layouts tall:bias=60;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        2000
+
 # EDITOR
 editor                  nvim
 input_delay             1
 cursor_blink_interval   0
+
 # TABS
 tab_bar_style           separator
 tab_separator           "|"
+
 # FONT
-font_size               21
-font_family             ProggyCleanTT
-#font_family             IBM Plex Mono
-#bold_font               IBM Plex Mono Bold
-#italic_font             IBM Plex Mono Italic
+font_size               18
+font_family             IBM Plex Mono
+bold_font               IBM Plex Mono Bold
+italic_font             IBM Plex Mono Italic
+
 # CLIPBOARD
 detect_urls             yes
 copy_on_select          no
