--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # MacOS TWEAKS
-macos_thicken_font      0.5
+macos_thicken_font      0.7
 map ctrl+shift+enter    new_window_with_cwd
 macos_quit_when_last_window_closed yes
 
@@ -36,72 +36,62 @@ detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
 
-# INDUSTRY DARK
-#cursor                  #FFFFFF
-#tab_bar_background      #232323
-#active_tab_background   #232323
-#active_tab_foreground   #FF00FF
-#inactive_tab_background #232323
-#inactive_tab_foreground #888888
-#active_border_color     #00FF00
-#inactive_border_color   #232323
-
-## MELANGE DARK
-#background              #2A2622
-#foreground              #EDE6DE
-#cursor                  #FFFFFF
-#url_color               #94A8D1
-#selection_background    #544D45
-#selection_foreground    #EDE6DE
-#tab_bar_background      #38332E
-#active_tab_background   #38332E
-#active_tab_foreground   #E09952
-#inactive_tab_background #38332E
-#inactive_tab_foreground #C9B39C
-#active_border_color     #EDE6DE
-#inactive_border_color   #463F3A
-#color0                  #38332E
-#color1                  #B34D4D
-#color2                  #669966
-#color3                  #F7C96E
-#color4                  #94A8D1
-#color5                  #AD85AD
-#color6                  #85ADAD
-#color7                  #C9B39C
-#color8                  #544D45
-#color9                  #F7856E
-#color10                 #94D194
-#color11                 #F7C96E
-#color12                 #94A8D1
-#color13                 #D194BD
-#color14                 #94D1D1
+# MELANGE DARK
+background              #2A2622
+foreground              #EDE6DE
+cursor                  #FFFFFF
+url_color               #94A8D1
+selection_background    #544D45
+selection_foreground    #EDE6DE
+tab_bar_background      #38332E
+active_tab_background   #38332E
+active_tab_foreground   #E09952
+inactive_tab_background #38332E
+inactive_tab_foreground #C9B39C
+active_border_color     #EDE6DE
+inactive_border_color   #463F3A
+color0                  #38332E
+color1                  #B34D4D
+color2                  #669966
+color3                  #F7C96E
+color4                  #94A8D1
+color5                  #AD85AD
+color6                  #85ADAD
+color7                  #C9B39C
+color8                  #544D45
+color9                  #F7856E
+color10                 #94D194
+color11                 #F7C96E
+color12                 #94A8D1
+color13                 #D194BD
+color14                 #94D1D1
 
 # MATERIAL DARKER
-background            #222222
-foreground            #E4E4E4
-cursor                #FFFFFF
-selection_background  #DEDEDE
-color0                #212121
-color8                #424242
-color1                #B7141E
-color9                #E83A3F
-color2                #457B23
-color10               #7ABA39
-color3                #F5971D
-color11               #FEE92E
-color4                #134EB2
-color12               #53A4F3
-color5                #550087
-color13               #A94DBB
-color6                #0E707C
-color14               #26BAD1
-color7                #EEEEEE
-color15               #D8D8D8
-selection_foreground  #333333
-tab_bar_background    #333333
-active_tab_background #333333
-active_tab_foreground #FFA500
-inactive_tab_background #333333
-inactive_tab_foreground #777777
-active_border_color   #333333
-inactive_border_color #333333
+#background            #222222
+#foreground            #E4E4E4
+#cursor                #FFFFFF
+#selection_background  #DEDEDE
+#color0                #212121
+#color8                #424242
+#color1                #B7141E
+#color9                #E83A3F
+#color2                #457B23
+#color10               #7ABA39
+#color3                #F5971D
+#color11               #FEE92E
+#color4                #134EB2
+#color12               #53A4F3
+#color5                #550087
+#color13               #A94DBB
+#color6                #0E707C
+#color14               #26BAD1
+#color7                #EEEEEE
+#color15               #D8D8D8
+#selection_foreground  #333333
+#tab_bar_background    #333333
+#active_tab_background #333333
+#active_tab_foreground #FFA500
+#inactive_tab_background #333333
+#inactive_tab_foreground #777777
+#active_border_color   #333333
+#inactive_border_color #333333
