--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,9 +10,9 @@ hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
 initial_window_width    90c
-initial_window_height   27c
+initial_window_height   36c
 bell_border_color       #000010
-enabled_layouts tall:bias=60;full_size=1;mirrored=false
+enabled_layouts fat:bias=36;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        2000
 
@@ -36,62 +36,62 @@ detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
 
-# MELANGE DARK
-background              #2A2622
-foreground              #EDE6DE
-cursor                  #FFFFFF
-url_color               #94A8D1
-selection_background    #544D45
-selection_foreground    #EDE6DE
-tab_bar_background      #38332E
-active_tab_background   #38332E
-active_tab_foreground   #E09952
-inactive_tab_background #38332E
-inactive_tab_foreground #C9B39C
-active_border_color     #EDE6DE
-inactive_border_color   #463F3A
-color0                  #38332E
-color1                  #B34D4D
-color2                  #669966
-color3                  #F7C96E
-color4                  #94A8D1
-color5                  #AD85AD
-color6                  #85ADAD
-color7                  #C9B39C
-color8                  #544D45
-color9                  #F7856E
-color10                 #94D194
-color11                 #F7C96E
-color12                 #94A8D1
-color13                 #D194BD
-color14                 #94D1D1
+## MELANGE DARK
+#background              #2A2622
+#foreground              #EDE6DE
+#cursor                  #FFFFFF
+#url_color               #94A8D1
+#selection_background    #544D45
+#selection_foreground    #EDE6DE
+#tab_bar_background      #38332E
+#active_tab_background   #38332E
+#active_tab_foreground   #E09952
+#inactive_tab_background #38332E
+#inactive_tab_foreground #C9B39C
+#active_border_color     #EDE6DE
+#inactive_border_color   #463F3A
+#color0                  #38332E
+#color1                  #B34D4D
+#color2                  #669966
+#color3                  #F7C96E
+#color4                  #94A8D1
+#color5                  #AD85AD
+#color6                  #85ADAD
+#color7                  #C9B39C
+#color8                  #544D45
+#color9                  #F7856E
+#color10                 #94D194
+#color11                 #F7C96E
+#color12                 #94A8D1
+#color13                 #D194BD
+#color14                 #94D1D1
 
 # MATERIAL DARKER
-#background            #222222
-#foreground            #E4E4E4
-#cursor                #FFFFFF
-#selection_background  #DEDEDE
-#color0                #212121
-#color8                #424242
-#color1                #B7141E
-#color9                #E83A3F
-#color2                #457B23
-#color10               #7ABA39
-#color3                #F5971D
-#color11               #FEE92E
-#color4                #134EB2
-#color12               #53A4F3
-#color5                #550087
-#color13               #A94DBB
-#color6                #0E707C
-#color14               #26BAD1
-#color7                #EEEEEE
-#color15               #D8D8D8
-#selection_foreground  #333333
-#tab_bar_background    #333333
-#active_tab_background #333333
-#active_tab_foreground #FFA500
-#inactive_tab_background #333333
-#inactive_tab_foreground #777777
-#active_border_color   #333333
-#inactive_border_color #333333
+background            #222222
+foreground            #E4E4E4
+cursor                #FFFFFF
+selection_background  #DEDEDE
+color0                #212121
+color8                #424242
+color1                #B7141E
+color9                #E83A3F
+color2                #457B23
+color10               #7ABA39
+color3                #F5971D
+color11               #FEE92E
+color4                #134EB2
+color12               #53A4F3
+color5                #550087
+color13               #A94DBB
+color6                #0E707C
+color14               #26BAD1
+color7                #EEEEEE
+color15               #D8D8D8
+selection_foreground  #333333
+tab_bar_background    #333333
+active_tab_background #333333
+active_tab_foreground #FFA500
+inactive_tab_background #333333
+inactive_tab_foreground #777777
+active_border_color   #333333
+inactive_border_color #333333
