--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -66,28 +66,63 @@ strip_trailing_spaces   always
 #color13                 #D194BD
 #color14                 #94D1D1
 
-# MATERIAL DARKER
-background            #222222
-foreground            #E4E4E4
-cursor                #FFFFFF
-selection_background  #DEDEDE
-color0                #212121
-color8                #424242
-color1                #B7141E
-color9                #E83A3F
-color2                #457B23
-color10               #7ABA39
-color3                #F5971D
-color11               #FEE92E
-color4                #134EB2
-color12               #53A4F3
-color5                #550087
-color13               #A94DBB
-color6                #0E707C
-color14               #26BAD1
-color7                #EEEEEE
-color15               #D8D8D8
-selection_foreground  #333333
+## MATERIAL DARKER
+#background            #222222
+#foreground            #E4E4E4
+#cursor                #FFFFFF
+#selection_background  #DEDEDE
+#color0                #212121
+#color8                #424242
+#color1                #B7141E
+#color9                #E83A3F
+#color2                #457B23
+#color10               #7ABA39
+#color3                #F5971D
+#color11               #FEE92E
+#color4                #134EB2
+#color12               #53A4F3
+#color5                #550087
+#color13               #A94DBB
+#color6                #0E707C
+#color14               #26BAD1
+#color7                #EEEEEE
+#color15               #D8D8D8
+#selection_foreground  #333333
+#tab_bar_background    #333333
+#active_tab_background #333333
+#active_tab_foreground #FFA500
+#inactive_tab_background #333333
+#inactive_tab_foreground #777777
+#active_border_color   #333333
+#inactive_border_color #333333
+
+GRUVBOX
+background  #292929
+foreground  #e8dbb7
+# black
+color0   #272727
+color8   #928373
+# red
+color1   #cc231c
+color9   #fb4833
+# green
+color2   #989719
+color10  #b8ba25
+# yellow
+color3   #d79920
+color11  #fabc2e
+# blue
+color4  #448488
+color12 #83a597
+# magenta
+color5   #b16185
+color13  #d3859a
+# cyan
+color6   #689d69
+color14  #8ec07b
+# white
+color7   #a89983
+color15  #ebdbb2
 tab_bar_background    #333333
 active_tab_background #333333
 active_tab_foreground #FFA500
