--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -26,10 +26,11 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               18
-font_family             IBM Plex Mono
-bold_font               IBM Plex Mono Bold
-italic_font             IBM Plex Mono Italic
+font_size               16
+font_family             Hack
+#font_family             IBM Plex Mono
+#bold_font               IBM Plex Mono Bold
+#italic_font             IBM Plex Mono Italic
 
 # CLIPBOARD
 detect_urls             yes
@@ -97,6 +98,7 @@ strip_trailing_spaces   always
 #inactive_border_color #333333
 
 GRUVBOX
+cursor    #e8dbb7
 background  #292929
 foreground  #e8dbb7
 # black
