--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -26,11 +26,10 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               18
-font_family             Hack
-#font_family             IBM Plex Mono
-#bold_font               IBM Plex Mono Bold
-#italic_font             IBM Plex Mono Italic
+font_size               16
+font_family             IBM Plex Mono
+bold_font               IBM Plex Mono Bold
+italic_font             IBM Plex Mono Italic
 
 # CLIPBOARD
 detect_urls             yes
