--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -36,35 +36,63 @@ detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
 
-# MELANGE DARK
-background              #2A2622
-foreground              #EDE6DE
-cursor                  #FFFFFF
-url_color               #94A8D1
-selection_background    #544D45
-selection_foreground    #EDE6DE
-tab_bar_background      #38332E
-active_tab_background   #38332E
-active_tab_foreground   #E09952
-inactive_tab_background #38332E
-inactive_tab_foreground #C9B39C
-active_border_color     #EDE6DE
-inactive_border_color   #463F3A
-color0                  #38332E
-color1                  #B34D4D
-color2                  #669966
-color3                  #F7C96E
-color4                  #94A8D1
-color5                  #AD85AD
-color6                  #85ADAD
-color7                  #C9B39C
-color8                  #544D45
-color9                  #F7856E
-color10                 #94D194
-color11                 #F7C96E
-color12                 #94A8D1
-color13                 #D194BD
-color14                 #94D1D1
+## MELANGE DARK
+#background              #2A2622
+#foreground              #EDE6DE
+#cursor                  #FFFFFF
+#url_color               #94A8D1
+#selection_background    #544D45
+#selection_foreground    #EDE6DE
+#tab_bar_background      #38332E
+#active_tab_background   #38332E
+#active_tab_foreground   #E09952
+#inactive_tab_background #38332E
+#inactive_tab_foreground #C9B39C
+#active_border_color     #EDE6DE
+#inactive_border_color   #463F3A
+#color0                  #38332E
+#color1                  #B34D4D
+#color2                  #669966
+#color3                  #F7C96E
+#color4                  #94A8D1
+#color5                  #AD85AD
+#color6                  #85ADAD
+#color7                  #C9B39C
+#color8                  #544D45
+#color9                  #F7856E
+#color10                 #94D194
+#color11                 #F7C96E
+#color12                 #94A8D1
+#color13                 #D194BD
+#color14                 #94D1D1
+
+background #F4F0ED
+foreground #6B5C4D
+cursor     #FFB347
+url_color  #485F84
+selection_background    #DED2C8
+selection_foreground    #6B5C4D
+tab_bar_background      #E9E1DB
+active_tab_background   #E9E1DB
+active_tab_foreground   #C29830
+inactive_tab_background #E9E1DB
+inactive_tab_foreground #867462
+color0  #E9E1DB
+color1  #D7898C
+color2  #83B887
+color3  #C29830
+color4  #485F84
+color5  #BE79BB
+color6  #729893
+color7  #A38D78
+color8  #DED2C8
+color9  #C65333
+color10 #659E69
+color11 #C29830
+color12 #485F84
+color13 #854882
+color14 #436460
+color15 #867462
 
 ## MATERIAL DARKER
 #background            #222222
