--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # MacOS TWEAKS
-macos_thicken_font      0.7
+macos_thicken_font      0.3
 map ctrl+shift+enter    new_window_with_cwd
 macos_quit_when_last_window_closed yes
 
@@ -133,7 +133,7 @@ color15 #867462
 ## license: MIT
 ## upstream: https://github.com/mcchrish/zenbones.nvim/raw/main/extras/kitty/zenbones_dark.conf
 foreground                      #B4BDC3
-background                      #1C1917
+background                      #191919
 selection_foreground            #B4BDC3
 selection_background            #3D4042
 # Cursor colors
