--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -143,10 +143,12 @@ cursor_text_color               #1C1917
 # kitty window border colors
 # OS Window titlebar colors
 # Tab bar colors
-active_tab_foreground           #B4BDC3
-active_tab_background           #65435E
-inactive_tab_foreground         #B4BDC3
-inactive_tab_background         #3E3835
+active_tab_background   #38332E
+active_tab_foreground   #E09952
+inactive_tab_background #38332E
+inactive_tab_foreground #C9B39C
+active_border_color     #EDE6DE
+inactive_border_color   #463F3A
 # Colors for marks (marked text in the terminal)
 # The basic 16 colors
 # black
