--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ enable_audio_bell no
 background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
-remember_window_size    no
+remember_window_size    yes
 initial_window_width    76c
 initial_window_height   36c
 bell_border_color       #000010
