--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,12 +9,13 @@ background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
-initial_window_width    76c
-initial_window_height   36c
+initial_window_width    90c
+initial_window_height   24c
 bell_border_color       #000010
 enabled_layouts fat:bias=64;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        2000
+mouse_hide_wait         0.4
 
 # EDITOR
 editor                  nvim
@@ -26,7 +27,7 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               13
+font_size               14
 font_family             IBM Plex Mono
 bold_font               IBM Plex Mono Bold
 italic_font             IBM Plex Mono Italic
