--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,7 +10,7 @@ hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
 initial_window_width    90c
-initial_window_height   24c
+initial_window_height   27c
 bell_border_color       #000010
 enabled_layouts fat:bias=64;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
@@ -27,10 +27,10 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               14
-font_family             IBM Plex Mono
-bold_font               IBM Plex Mono Bold
-italic_font             IBM Plex Mono Italic
+font_size               21
+font_family             ProggyCleanTT
+#bold_font               IBM Plex Mono Bold
+#italic_font             IBM Plex Mono Italic
 
 # CLIPBOARD
 detect_urls             yes
