--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -12,7 +12,7 @@ remember_window_size    no
 initial_window_width    81c
 initial_window_height   36c
 bell_border_color       #000010
-enabled_layouts fat:bias=64;full_size=1;mirrored=false
+enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        2000
 mouse_hide_wait         0.4
@@ -45,6 +45,8 @@ background              #282828
 foreground              #fbf1c7
 selection_foreground    #928374
 selection_background    #ebdbb2
+inactive_border_color   #282828
+active_border_color     #7c6f64
 # black
 color0                  #282828
 color8                  #7c6f64
