--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -27,10 +27,10 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               16
-font_family             Liga SFMono Nerd Font
-bold_font               Liga SFMono Nerd Font Bold
-italic_font             Liga SFMono Nerd Font Italic
+font_size               15
+font_family             IBM Plex Mono
+bold_font               IBM Plex Mono Bold
+italic_font             IBM Plex Mono Italic
 
 # CLIPBOARD
 detect_urls             yes
