--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -28,9 +28,9 @@ tab_separator           "|"
 
 # FONT
 font_size               15
-font_family             IBM Plex Mono
-bold_font               IBM Plex Mono Bold
-italic_font             IBM Plex Mono Italic
+font_family             Liga SFMono Nerd Font
+bold_font               Liga SFMono Nerd Font Bold
+italic_font             Liga SFMono Nerd Font Italic
 
 # CLIPBOARD
 detect_urls             yes
