--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -20,8 +20,8 @@ mouse_hide_wait         0.1
 # EDITOR
 editor                  nvim
 input_delay             1
-cursor_shape            block
-cursor_beam_thickness   100
+cursor_shape            underline
+#cursor_beam_thickness   100
 cursor_blink_interval   0
 
 # TABS
