--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -29,7 +29,7 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               20
+font_size               18
 font_family             Liga SFMono Nerd Font
 bold_font               Liga SFMono Nerd Font Bold
 italic_font             Liga SFMono Nerd Font Italic
@@ -87,11 +87,11 @@ selection_background    #d7ba7d
 url_color               #0087BD
 inactive_border_color   #222222
 active_border_color     #222222
-active_tab_foreground   #000000
-active_tab_background   #fabd2f
+active_tab_foreground   #D4D4D4
+active_tab_background   #373737
 active_tab_font_style   bold-italic
-inactive_tab_foreground #7c6f64
-inactive_tab_background #282828
+inactive_tab_foreground #5A5A5A
+inactive_tab_background #262626
 inactive_tab_font_style normal
 # black
 color0   #1e1e1e
