--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -18,7 +18,7 @@ scrollback_lines        2000
 mouse_hide_wait         0.1
 
 # EDITOR
-#shell_integration       no-cursor
+shell_integration       no-cursor
 editor                  nvim
 input_delay             3
 cursor_blink_interval   0
